<resources>
    <string name="app_name">Timely Soft</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_characters">Characters</string>
    <string name="title_reset">reset</string>
    <string name="title_filter">filter</string>
    <string name="txt_alive">Alive</string>
    <string name="txt_deat">Deat</string>
    <string name="txt_unknown">Unknown</string>
    <string name="txt_gender">Gender</string>
    <string name="txt_female">female</string>
</resources>