<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/filterFragment"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".filtrFragment"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_filter"
        android:textAlignment="center"
        android:textSize="18dp"
        android:padding="16dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Status"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_alive"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_alive" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_deat"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_deat" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_inknown"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_unknown" />

        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/txt_gender"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_female"
                style="@style/RadioButtonStyle"
                android:text="female" />

            <RadioButton
                android:id="@+id/radio_male"
                style="@style/RadioButtonStyle"
                android:text="male" />
            <RadioButton
            android:id="@+id/radio_unknown"
            style="@style/RadioButtonStyle"
            android:text="Unknown" />

            <RadioButton
                android:id="@+id/radio_gender"
                style="@style/RadioButtonStyle"
                android:text="GenderLess" />




        </RadioGroup>

        <Button
            android:id="@+id/apply_button"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="apply"
            android:textColor="@color/black"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"/>


    </LinearLayout>


</LinearLayout>